Assignment2_Zhao_Duo/tests/automated/tests/good/ScientificNotationLittleBland-9Chomped.calc
a .0e2 b 1.e2 c 2.3e3 d 34.5e4 e 6.78e7 f 99.99e5 g 3e9 h 76e4