Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationLittleBlandWithBadCharacters-9.calc
a .0%e2 b 1.%e2 c 2.3%e3 d 34.5%e4 e 6.78%e7 f 99.99%e5 g 3%e9 h 76%e4
